force-app/main/default/objects/Sample_Request__c/Sample_Request__c.object-meta.xml
<CustomObject>
    <description>Apex Coco sample lifecycle. Person 2 workstream. Tracks every sample iteration linked to the commercial Opportunity.</description>
    <label>Sample Request</label>
    <nameField>
        <displayFormat>SMPREQ-{0000}</displayFormat>
        <label>Sample Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>