force-app/main/default/objects/Sample_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Filled automatically from the Opportunity or parent sample when left blank.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>