force-app/main/default/objects/Sample_Request__c/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <inlineHelpText>Required when the status is Closed.</inlineHelpText>
    <label>Closure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>