force-app/main/default/objects/Sample_Request__c/fields/Courier_Partner__c.field-meta.xml
<CustomField>
    <fullName>Courier_Partner__c</fullName>
    <inlineHelpText>Required when the status is Dispatched.</inlineHelpText>
    <label>Courier Partner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>