force-app/main/default/objects/Sample_Request__c/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <inlineHelpText>Required when the status is Feedback Received and before a sample can be approved.</inlineHelpText>
    <label>Customer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>