force-app/main/default/objects/Sample_Request__c/fields/Days_Pending_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Days_Pending_Feedback__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, "Customer Testing"), TODAY() - BLANKVALUE(Dispatch_Date__c, Requested_Date__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Pending Feedback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>