force-app/main/default/objects/Sample_Request__c/fields/Days_Since_Request__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Request__c</fullName>
    <formula>TODAY() - Requested_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>