force-app/main/default/objects/Sample_Request__c/fields/Feedback_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Due_Date__c</fullName>
    <label>Feedback Due Date</label>
    <type>Date</type>
</CustomField>