force-app/main/default/objects/Sample_Request__c/fields/Feedback_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Received_Date__c</fullName>
    <label>Feedback Received Date</label>
    <type>Date</type>
</CustomField>