force-app/main/default/objects/Sample_Request__c/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <formula>NOT(OR(ISPICKVAL(Status__c, "Approved"), ISPICKVAL(Status__c, "Rejected"), ISPICKVAL(Status__c, "Closed")))</formula>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>