force-app/main/default/objects/Sample_Request__c/fields/Iteration_Number__c.field-meta.xml
<CustomField>
    <fullName>Iteration_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Iteration Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>