force-app/main/default/objects/Sample_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Retains the qualified Lead supplied by Person 1 (Visiting Card -&gt; Lead).</description>
    <label>Source Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>