force-app/main/default/objects/Sample_Request__c/fields/Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Action__c</fullName>
    <inlineHelpText>Required when a sample is rejected.</inlineHelpText>
    <label>Next Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>