force-app/main/default/objects/Sample_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Commercial context. Populated automatically by the flow Apex_Sample_Request_After_Create when left blank.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>