force-app/main/default/objects/Sample_Request__c/fields/Parent_Sample_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sample_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links iteration 2, 3... back to the previous sample for the same opportunity.</inlineHelpText>
    <label>Parent Sample Request</label>
    <referenceTo>Sample_Request__c</referenceTo>
    <relationshipLabel>Sample Iterations</relationshipLabel>
    <relationshipName>Sample_Iterations</relationshipName>
    <type>Lookup</type>
</CustomField>