force-app/main/default/objects/Sample_Request__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Texture / Specification</fullName>
            </value>
            <value>
                <fullName>Taste</fullName>
            </value>
            <value>
                <fullName>Colour</fullName>
            </value>
            <value>
                <fullName>Moisture</fullName>
            </value>
            <value>
                <fullName>Particle Size</fullName>
            </value>
            <value>
                <fullName>Fat Content</fullName>
            </value>
            <value>
                <fullName>Microbiology</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>