force-app/main/default/objects/Sample_Request__c/fields/Sample_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sample_Quantity__c</fullName>
    <label>Sample Quantity</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>