force-app/main/default/objects/Sample_Request__c/fields/Sample_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sample_Unit__c</fullName>
    <label>Sample Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
                <default>true</default>
                <label>KG</label>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>