force-app/main/default/objects/Sample_Request__c/fields/Specification__c.field-meta.xml
<CustomField>
    <fullName>Specification__c</fullName>
    <inlineHelpText>Spec or grade requested by the customer. Change it on the next iteration when the customer asks for an adjustment.</inlineHelpText>
    <label>Specification / Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>