force-app/main/default/objects/Sample_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Approval Pending</fullName>
            </value>
            <value>
                <fullName>Prepared</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Customer Testing</fullName>
            </value>
            <value>
                <fullName>Feedback Received</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>