force-app/main/default/objects/Sample_Request__c/fields/Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Link__c</fullName>
    <formula>IF(ISBLANK(Tracking_Number__c), "", HYPERLINK("https://www.google.com/search?q=" &amp; Tracking_Number__c, "Track " &amp; Tracking_Number__c, "_blank"))</formula>
    <label>Tracking Link</label>
    <type>Text</type>
</CustomField>