force-app/main/default/objects/Sample_Request__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <inlineHelpText>Required when the status is Dispatched.</inlineHelpText>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>