force-app/main/default/objects/Sample_Request__c/validationRules/VR_Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Account_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Account__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account is required. It is filled automatically when the sample is created from an Opportunity or a parent sample.</errorMessage>
</ValidationRule>