force-app/main/default/objects/Sample_Request__c/validationRules/VR_Approved_Requires_Feedback.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Approved_Requires_Feedback</fullName>
    <active>true</active>
    <description>VR-Sample-Approved</description>
    <errorConditionFormula>ISPICKVAL(Result__c, "Approved") &amp;&amp; ISBLANK(Customer_Feedback__c)</errorConditionFormula>
    <errorDisplayField>Customer_Feedback__c</errorDisplayField>
    <errorMessage>Record the customer feedback before approving a sample.</errorMessage>
</ValidationRule>