force-app/main/default/objects/Sample_Request__c/validationRules/VR_Closed_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Closed_Requires_Reason</fullName>
    <active>true</active>
    <description>VR-Sample-Closed</description>
    <errorConditionFormula>ISPICKVAL(Status__c, "Closed") &amp;&amp; ISBLANK(Closure_Reason__c)</errorConditionFormula>
    <errorDisplayField>Closure_Reason__c</errorDisplayField>
    <errorMessage>Enter a closure reason when closing a sample request without a result.</errorMessage>
</ValidationRule>