force-app/main/default/objects/Sample_Request__c/validationRules/VR_Dispatch_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Dispatch_Requires_Date</fullName>
    <active>true</active>
    <description>VR-Sample-Dispatch-Date</description>
    <errorConditionFormula>ISPICKVAL(Status__c, "Dispatched") &amp;&amp; ISBLANK(Dispatch_Date__c)</errorConditionFormula>
    <errorDisplayField>Dispatch_Date__c</errorDisplayField>
    <errorMessage>Dispatch date is required when the status is Dispatched.</errorMessage>
</ValidationRule>