force-app/main/default/objects/Sample_Request__c/validationRules/VR_Feedback_Requires_Result.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Feedback_Requires_Result</fullName>
    <active>true</active>
    <description>VR-Sample-Result</description>
    <errorConditionFormula>ISPICKVAL(Status__c, "Feedback Received") &amp;&amp; (ISBLANK(TEXT(Result__c)) || ISPICKVAL(Result__c, "Pending"))</errorConditionFormula>
    <errorDisplayField>Result__c</errorDisplayField>
    <errorMessage>Select the sample result (Approved or Rejected) when feedback is received.</errorMessage>
</ValidationRule>