force-app/main/default/objects/Sample_Request__c/validationRules/VR_Feedback_Requires_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Feedback_Requires_Text</fullName>
    <active>true</active>
    <description>VR-Sample-Feedback</description>
    <errorConditionFormula>ISPICKVAL(Status__c, "Feedback Received") &amp;&amp; ISBLANK(Customer_Feedback__c)</errorConditionFormula>
    <errorDisplayField>Customer_Feedback__c</errorDisplayField>
    <errorMessage>Record the customer feedback before setting the status to Feedback Received.</errorMessage>
</ValidationRule>