force-app/main/default/objects/Sample_Request__c/validationRules/VR_Product_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Product_Required</fullName>
    <active>true</active>
    <description>Product lookup to Product2 cannot be DB-required (Product2 does not allow restrict delete).</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Select the product to sample.</errorMessage>
</ValidationRule>