force-app/main/default/objects/Sample_Request__c/validationRules/VR_Quantity_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Quantity_Positive</fullName>
    <active>true</active>
    <description>VR-Sample-Quantity</description>
    <errorConditionFormula>Sample_Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Sample_Quantity__c</errorDisplayField>
    <errorMessage>Sample quantity must be greater than zero.</errorMessage>
</ValidationRule>