force-app/main/default/objects/Sample_Request__c/validationRules/VR_Rejected_Requires_Next_Action.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Rejected_Requires_Next_Action</fullName>
    <active>true</active>
    <description>VR-Sample-Rejection-Action</description>
    <errorConditionFormula>ISPICKVAL(Result__c, "Rejected") &amp;&amp; ISBLANK(Next_Action__c)</errorConditionFormula>
    <errorDisplayField>Next_Action__c</errorDisplayField>
    <errorMessage>Enter the next action (for example: send revised sample with adjusted specification) when a sample is rejected.</errorMessage>
</ValidationRule>