force-app/main/default/objects/Sample_Request__c/validationRules/VR_Rejected_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Rejected_Requires_Reason</fullName>
    <active>true</active>
    <description>VR-Sample-Rejection</description>
    <errorConditionFormula>ISPICKVAL(Result__c, "Rejected") &amp;&amp; ISBLANK(TEXT(Rejection_Reason__c))</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>A rejection reason is required when a sample is rejected. The opportunity stays open for the next iteration.</errorMessage>
</ValidationRule>