force-app/main/default/objects/Sample_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Iteration_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Result__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Next_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sample Requests</label>
</ListView>