force-app/main/default/objects/Sample_Request__c/listViews/Open_Sample_Aging.listView-meta.xml
<ListView>
    <fullName>Open_Sample_Aging</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Days_Since_Request__c</columns>
    <columns>Days_Pending_Feedback__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Open__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Open Samples - Aging</label>
</ListView>