force-app/main/default/objects/Sample_Request__c/listViews/Rejected_Needs_Iteration.listView-meta.xml
<ListView>
    <fullName>Rejected_Needs_Iteration</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Iteration_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Result__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Next_Action__c</columns>
    <columns>Rejection_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Result__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected - Next Iteration Due</label>
</ListView>