force-app/main/default/objects/Sample_Request__c/listViews/Sales_Admin_Preparation_Queue.listView-meta.xml
<ListView>
    <fullName>Sales_Admin_Preparation_Queue</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Iteration_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Result__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Dispatch_Date__c</columns>
    <columns>Tracking_Number__c</columns>
    <columns>Next_Action__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Approval Pending,Prepared</value>
    </filters>
    <label>Sales Admin - To Prepare / Dispatch</label>
</ListView>